# PyroSense

./: .gitignore  README.md  docker-compose.yml
backend/: package-lock.json  package.json  tsconfig.json
backend/src/: index.ts
backend/src/constants/: index.ts
backend/src/services/: alarmLogRepository.ts  alarmManager.ts  database.ts  fusekiClient.ts  httpServer.ts  inferenceService.ts  mongoClient.ts  mqttConsumer.ts  rdfConverter.ts  riskCalculator.ts  riskRepository.ts  sensorRepository.ts  sparqlService.ts  weatherRepository.ts  weatherService.ts  wsGateway.ts
backend/src/types/: sensor.ts
config/mosquitto/: mosquitto.conf
config/postgres/: init.sql  migrate_12zones.sql
frontend/: .prettierrc  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AlarmList.tsx  AnalyticsPage.tsx  ReasoningLog.tsx  RiskCard.tsx  ScenarioControl.tsx  SensorChart.tsx  WeatherWidget.tsx  ZoneMap.tsx
frontend/src/types/: index.ts
ontology/: pyrosense-core.owl  pyrosense-rules.jrl
scripts/: start.sh
simulator/: Cargo.toml
simulator/src/: main.rs  nodes.rs
simulator/src/models/: sensor.rs
simulator/src/mqtt/: publisher.rs
simulator/src/scenarios/: mod.rs
