[package]
name = "pyrosense-simulator"
version = "0.1.0"
edition = "2021"
authors = ["PyroSense Team"]
description = "PyroSense fizik tabanlı sensör simülatörü"

[[bin]]
name = "simulator"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# MQTT istemcisi
rumqttc = "0.24"

# JSON serileştirme
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Rastgele sayı üretimi (Gauss + Weibull)
rand = "0.8"
rand_distr = "0.4"

# Zaman işlemleri
chrono = { version = "0.4", features = ["serde"] }

# HTTP (REST API üzerinden senaryo değiştirme)
axum = "0.7"
tower = "0.4"

# Loglama
tracing = "0.1"
tracing-subscriber = "0.3"

# Konfigürasyon
dotenv = "0.15"
